[FIX]Adjust scrollbar on sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@
     background-color: aquamarine;
 }
 .bottom{
+    position: fixed;
+    width: 100%;
     height: 75px;
     background-color: grey;
 }
@@ -55,6 +57,7 @@
     background-color: black;
     padding: 20px;
     color: #717171;
+    overflow-y: auto;
 }
 .logo img{
     width: 150px;
